Fixed back button style on mobile, Proof-read and cleaned up firebase post, performed gatsby build

--- a/src/styles/parts/_post-page.scss
+++ b/src/styles/parts/_post-page.scss
@@ -93,6 +93,7 @@
   padding: 5px 10px;
   margin-left: 5px;
   color: $dark-blue;
+  background-color: $white;
   text-transform: uppercase;
   border: 1px solid $dark-blue;
   border-radius: 3px;
